Bug 160765 - EDITING: Insert comment - Copy - Paste Comments - Undo - Show comment -> LO crash
Summary: EDITING: Insert comment - Copy - Paste Comments - Undo - Show comment -> LO c...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha1+
Hardware: All All
: medium critical
Assignee: Andreas Heinisch
URL:
Whiteboard: target:24.8.0 target:24.2.3.2 target:...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Calc-Comments Undo-Redo Crash
  Show dependency treegraph
 
Reported: 2024-04-21 14:30 UTC by Michael Otto
Modified: 2024-12-20 04:43 UTC (History)
2 users (show)

See Also:
Crash report or crash signature: ["libsclo.so","ScDrawView::SyncForGrid(SdrObject*)"]


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Otto 2024-04-21 14:30:12 UTC
from a new empty Calc file:
- A1 Insert any comment
- A1 Copy
- A2 Paste Special: only Comments
- Undo: Copy
-->A2 contains an empty comment but there should be no comment

A) 
Show comment --> LO crash reproducible
https://crashreport.libreoffice.org/stats/crash_details/fe5939a2-108f-4189-a671-909dfe4b50c3
(recovered document contains no more the copied comment: OK)

B) 
Edit comment does nothing
Delete comment -->OK, no more comment

Version: 24.2.1.2 (X86_64) / LibreOffice Community
Build ID: db4def46b0453cc22e2d0305797cf981b68ef5ac
CPU threads: 2; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-US (de_DE.UTF-8); UI: en-US
Calc: threaded

might be related to 
https://bugs.documentfoundation.org/show_bug.cgi?id=138428
which however is solved
Comment 1 Stéphane Guillou (stragu) 2024-04-22 02:07:43 UTC
Thanks for the report!

Reproduced in:

Version: 24.2.2.2 (X86_64) / LibreOffice Community
Build ID: d56cc158d8a96260b836f100ef4b4ef25d6f1a01
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded

With crash report: https://crashreport.libreoffice.org/stats/crash_details/c0d0b6d8-c3d2-4e0f-8489-b283da6adb32

As well as in recent trunk build:

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: bdf3b5ce49b0e4ee1b4525d344cfb037ef473059
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3

In 7.6.6.3, I get the signature "ScDrawView::SyncForGrid(SdrObject*)" : https://crashreport.libreoffice.org/stats/crash_details/3490c865-4532-42f3-ac26-ed7e30daf9cd

No repro in 7.5.9 -> regression.

Bibisected with linux-64-7.6 to first bad build [d82812a13723fc093897c1b27d29ac263c66d0d0] which is:

commit 28bcb35b12f19858eca3d08559d7914e36ad1d2b
author	Andreas Heinisch 	Wed May 10 09:08:47 2023 +0200
committer	Andreas Heinisch 	Fri May 12 09:01:56 2023 +0200
tdf#139858 - Do not delete existing cell contents when pasting notes
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151603

Andreas, can you please have a look?
Comment 2 Commit Notification 2024-04-24 08:07:44 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a1694b194c2b3e89250c5b79a69e7dd184b69976

tdf#160765 - Save content for undo when pasting notes

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-04-25 14:23:48 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/7e2e1d7fd4531f57bbc30a0a8e1cb8c40519a349

tdf#160765 - Save content for undo when pasting notes

It will be available in 24.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-04-29 13:57:49 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7e30434655754277bfa7ce7d8ec37b07181d2c92

tdf#160765 - Paste Special Dialog: Remember comments checkbox

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2024-04-29 16:44:32 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "libreoffice-24-2-3":

https://git.libreoffice.org/core/commit/985a85437c1352079ff1812b6039874b5226882b

tdf#160765 - Save content for undo when pasting notes

It will be available in 24.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-04-29 19:02:15 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/4d744d94cc4ee114a7e5d5373b2b599baed31ee5

tdf#160765 - Save content for undo when pasting notes

It will be available in 7.6.8.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2024-04-29 19:13:27 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/30524d5998d38b7e216b721859c72fbfc56a5b5a

tdf#160765 - Paste Special Dialog: Remember comments checkbox

It will be available in 24.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2024-05-06 13:48:19 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/a4f679ed901923046e4fee3e11a9fc236c4ff506

tdf#160765 - Paste Special Dialog: Remember comments checkbox

It will be available in 7.6.8.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2024-05-07 16:27:46 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "libreoffice-7-6-7":

https://git.libreoffice.org/core/commit/e600195ae980f297b414ef69161de7b629f59346

tdf#160765 - Save content for undo when pasting notes

It will be available in 7.6.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2024-05-07 16:28:48 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "libreoffice-7-6-7":

https://git.libreoffice.org/core/commit/d4cfeb2a69e40148ab080eae179e6278837fc754

tdf#160765 - Paste Special Dialog: Remember comments checkbox

It will be available in 7.6.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Lyle Francis 2024-12-20 04:43:46 UTC Comment hidden (spam)